--- a/Daraz.pk.html
+++ b/Daraz.pk.html
@@ -17,9 +17,9 @@
         frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
         allowfullscreen></iframe>
     <video controls height="400px" width="600px">
-        <source src="videos/videos.mp4" />
+        <source src="../videos/videos.mp4" />
     </video><audio controls height="300px" width="100px">
-        <source src="./Audios/Audio.ogg" />
+        <source src="../Audios/Audio.ogg" />
     </audio>
 
     <h1><i><ins>
