--- a/Food panda.html
+++ b/Food panda.html
@@ -29,7 +29,7 @@
 
 
     <a href="#end point">Lists</a>
-    <img src="./images/food panda.jfif  " />
+    <img src="../images/food panda.jfif  " />
     <iframe width="560" height="315" src="https://www.youtube.com/embed/gFY3nJb3Ufg" title="YouTube video player"
         frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
         allowfullscreen></iframe>
