--- a/Google.com.html
+++ b/Google.com.html
@@ -16,11 +16,11 @@
         allowfullscreen></iframe>
   
     <video controls height="400px" width="600px">
-        <source src="./videos/videos.mp4" />
+        <source src="../videos/videos.mp4" />
     </video>
     <iframe src="./YouTube.html " title="Youtube " hight="500px" width="500px"> </iframe>
      <audio controls height="300px"width="100 px">
-        <source src="./Audios/Audio.ogg" />
+        <source src="../Audios/Audio.ogg" />
      </audio>
  <h1><i><b><ins>
                     <blockquote><mark> Google.com</mark></blockquote>
