--- a/Table.html
+++ b/Table.html
@@ -40,7 +40,7 @@
         <ul>
             <tr>
                 <td>4</td>
-                <td> <img src="./images/food panda.jfif" /> </td>
+                <td> <img src="../images/food panda.jfif" /> </td>
             </tr>
         </ul>
     </table>
