Load files again

--- a/Daraz.pk.html
+++ b/Daraz.pk.html
@@ -17,9 +17,9 @@
         frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
         allowfullscreen></iframe>
     <video controls height="400px" width="600px">
-        <source src="../videos/videos.mp4" />
+        <source src="videos/videos.mp4" />
     </video><audio controls height="300px" width="100px">
-        <source src="../Audios/Audio.ogg" />
+        <source src="./Audios/Audio.ogg" />
     </audio>
 
     <h1><i><ins>
@@ -136,9 +136,9 @@
         <hr />
         <p id="last line">
         <address><i><ins><b>Email;</b></ins></i>
-            <pre>  123@gmail.com</pre>
+            <pre>   muhammadmonissheikh9</pre>
             <i><ins><b>Phone no;</b></ins></i>
-            <pre>         0305wwwww</pre>
+            <pre>         03057423088</pre>
             <i><ins><b>House address;</b></ins></i>
             <pre>        32p faisalabad </pre>
         </address>
