--- a/Food panda.html
+++ b/Food panda.html
@@ -29,7 +29,7 @@
 
 
     <a href="#end point">Lists</a>
-    <img src="../images/food panda.jfif  " />
+    <img src="./images/food panda.jfif  " />
     <iframe width="560" height="315" src="https://www.youtube.com/embed/gFY3nJb3Ufg" title="YouTube video player"
         frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
         allowfullscreen></iframe>
@@ -62,8 +62,8 @@
             <ins>40<sub>%</sub></ins>discount.
         </p>
         <p> In Food panda App or web,the food delivery is free </p>
-        <address><i> <b><ins> Email; </ins></b></i> 123@gmil.com</address>
-        <address><i><b><ins>Phone.no;</ins></b></i>0305wwwww</address>
+        <address><i> <b><ins> Email; </ins></b></i> muhammadmonissheikh9@gmil.com</address>
+        <address><i><b><ins>Phone.no;</ins></b></i>03057423088</address>
         <address><i><b><ins>House address;</ins></b></i>p32 faisalabad</address>
         <cite>Food panda is very best site. </cite>
         <hr />
