--- a/Tables.html
+++ b/Tables.html
@@ -30,7 +30,7 @@
  <ul>
 <tr>
     <td>4</td>
-    <td><img src="../images/food panda.jfif"/></td>
+    <td><img src="./images/food panda.jfif"/></td>
 </tr>
 </ul>
 <tr>
