--- a/Google.com.html
+++ b/Google.com.html
@@ -18,7 +18,7 @@
     <video controls height="400px" width="600px">
         <source src="../videos/videos.mp4" />
     </video>
-    <iframe src="./YouTube.html " title="Youtube " hight="500px" width="500px"> </iframe>
+    <iframe src="./YouTube.html " title="Youtube " height="500px" width="500px"> </iframe>
      <audio controls height="300px"width="100 px">
         <source src="../Audios/Audio.ogg" />
      </audio>
