--- a/Table.html
+++ b/Table.html
@@ -9,7 +9,7 @@
 
 <body>
     <h1>Tables</h1>
-    <table border="2px"> 
+    <table border="2px">
         <tr>
             <th> Roll# </th>
             <th>students Name</th>
@@ -40,7 +40,7 @@
         <ul>
             <tr>
                 <td>4</td>
-                <td> <img src="../images/food panda.jfif" /> </td>
+                <td> <img src="./images/food panda.jfif" /> </td>
             </tr>
         </ul>
     </table>
