--- a/Careem.html
+++ b/Careem.html
@@ -19,11 +19,11 @@
         allowfullscreen></iframe>
 
     <video controls height="400px" width="600px">
-        <source src="../videos/videos.mp4" />
+        <source src="../assets/videos.mp4" />
     </video>
     <iframe src="./YouTube.html " title="Youtube " height="500px" width="500px"> </iframe>
     <audio controls height="300px" width="100 px">
-        <source src="../Audios/Audio.ogg" />
+        <source src="../assets/Audio.ogg" />
     </audio>
     <h1><i><ins>
                 <blockquote><mark>Careem</mark></blockquote>
