--- a/Amazon.com.html
+++ b/Amazon.com.html
@@ -16,10 +16,10 @@
         frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
         allowfullscreen></iframe>
     <video controls height="400px" width="600px">
-        <source src="../videos/videos.mp4" />
+        <source src="../assets/videos.mp4" />
     </video>
     <audio controls height="300px" width="100 px">
-        <source src=" ../Audios/Audio.ogg" />
+        <source src=" ../assets/Audio.ogg" />
     </audio> <iframe src="./Google.com.html " title="Youtube " height="500px" width="500px"> </iframe>
 
     <h1><i><b><ins>
