--- a/Food panda.html
+++ b/Food panda.html
@@ -26,7 +26,9 @@
 </style>
 
 <body>
-
+    <h1>
+        <center> <i><mark> <ins> Food panda </ins> </mark></i></center>
+    </h1>
 
     <a href="#end point">Lists</a>
     <img src="../assets/food panda.jfif  " />
@@ -36,9 +38,7 @@
 
     <iframe src="./YouTube.html " title="Youtube " hight="400px" width="400px"> </iframe>
     <a href="#Last line"><i> Last line of page </i></a>
-    <h1>
-        <blockquote> <i><mark> <ins> Food panda </ins> </mark></i></blockquote>
-    </h1>
+   
 
     <h2<emf><b> <ins> content; </ins> </b> </emf>
         </h2>
