--- a/Google.com.html
+++ b/Google.com.html
@@ -9,6 +9,9 @@
 </head>
 
 <body>
+    <h1><i><b><ins>
+        <center><mark><big> Google.com</big> </mark></center>
+    </ins></b></i></h1>
     <a href="#end point"><i><b>Start of the page</b> </i></a>
     <img src="https://pic.accessify.com/thumbnails/777x423/g/google.com.vn.png " />
     <iframe width="560" height="315" src="https://www.youtube.com/embed/rokGy0huYEA" title="YouTube video player"
@@ -22,9 +25,7 @@
      <audio controls height="300px"width="100 px">
         <source src="../assets//Audio.ogg" />
      </audio>
- <h1><i><b><ins>
-                    <blockquote><mark> Google.com</mark></blockquote>
-                </ins></b></i></h1>
+ 
     <ol>
         <h2><i><b><ins>
                         <li> content;</li>
